# odup

./: .envrc  dune-project  odup.opam
lib/: dune  phash.ml  phash_bindings.ml  phash_gen_c.ml  phash_gen_ml.ml  walk.ml
lib/phash_c/: dune
lib/phash_c/phash/: Makefile  configure  libtool
lib/phash_c/phash/bindings/: Makefile
lib/phash_c/phash/bindings/java/: Makefile
lib/phash_c/phash/examples/: Makefile
lib/phash_c/phash/examples/.deps/: test_imagephash.Po  test_mhimagehash.Po  test_texthash.Po  test_texthash2.Po
lib/phash_c/phash/src/: Makefile  pHash.cpp  pHash.h
lib/phash_c/phash/src/.deps/: pHash.Plo
src/: dune  phash.ml  walk.ml
