(library
 (name odup)
 (libraries core async rpc_parallel ctypes ctypes.foreign async_find camlzip fmt phash_c)
 (preprocess (pps ppx_jane)))

(data_only_dirs phash)

; (rule
;  (deps (source_tree phash))
;  (targets libphash.a)
;  (action
;   (no-infer
;    (progn
;     (chdir phash
;      (progn
;       (run cmake .)
;       (run make)))
;     (copy phash/libpHash.a libphash.a)))))
